--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
     "dependencies": {
-    "@hookform/resolvers": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.44.3",
-    "react-icons": "^4.9.0",
-    "react-router-dom": "^6.12.0",
-    "yup": "^1.2.0",
-    "@syncfusion/ej2": "^19.4.48",
-    "@syncfusion/ej2-react-calendars": "^19.4.48",
-    "@syncfusion/ej2-react-charts": "^19.4.50",
-    "@syncfusion/ej2-react-dropdowns": "^19.4.52",
-    "@syncfusion/ej2-react-grids": "^19.4.50",
-    "@syncfusion/ej2-react-inputs": "^19.4.52",
-    "@syncfusion/ej2-react-kanban": "^19.4.48",
-    "@syncfusion/ej2-react-popups": "^19.4.52",
-    "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
-    "@syncfusion/ej2-react-schedule": "^19.4.50"
-  }
+        "@hookform/resolvers": "^3.1.0",
+        "@syncfusion/ej2": "^19.4.48",
+        "@syncfusion/ej2-react-calendars": "^19.4.48",
+        "@syncfusion/ej2-react-charts": "^19.4.50",
+        "@syncfusion/ej2-react-dropdowns": "^19.4.52",
+        "@syncfusion/ej2-react-grids": "^19.4.50",
+        "@syncfusion/ej2-react-inputs": "^19.4.52",
+        "@syncfusion/ej2-react-kanban": "^19.4.48",
+        "@syncfusion/ej2-react-popups": "^19.4.52",
+        "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
+        "@syncfusion/ej2-react-schedule": "^19.4.50",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.44.3",
+        "react-icons": "^4.9.0",
+        "react-pro-sidebar": "^1.1.0-alpha.1",
+        "react-router-dom": "^6.12.0",
+        "yup": "^1.2.0"
+    }
 }
