--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-icons": "^4.9.0",
         "react-pro-sidebar": "^1.1.0-alpha.1",
         "react-router-dom": "^6.12.0",
+        "react-toastify": "^9.1.3",
         "yup": "^1.2.0"
     }
 }
